[tool.poetry]
name = "jara-utils"
version = "1.0.0"
description = "A package with basic stuff."
authors = ["Serban Senciuc <senciuc.serban@gmail.com>"]
readme = "README_pypi.rst"
repository = "https://github.com/senciucserban/jara-utils"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Utilities"
]
packages = [
    { include = "jara_utils" }
]

[tool.poetry.dependencies]
python = "^3.9.16"
pytz = "^2022.7.1"
types-pytz = "^2022.7.1.0"


[tool.poetry.group.test]
optional = true

[tool.poetry.group.test.dependencies]
faker = "^16.4.0"
pytest = "^7.2.1"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.20.3"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest-sugar = "^0.9.6"
pytest-deadfixtures = "^2.2.1"
ipython = "^8.8.0"
ipdb = "^0.13.11"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
mypy = "^0.991"
bandit = "^1.7.4"
flake8 = "^6.0.0"
flake8-quotes = "^3.3.2"
flake8-pytest-style = "^1.6.0"
flake8-comprehensions = "^3.10.1"
flake8-multiline-containers = "^0.0.19"
flake8-builtins = "^2.1.0"
flake8-print = "^5.0.0"
flake8-debugger = "^4.1.2"
flake8-simplify = "^0.19.3"
flake8-annotations = "^2.9.1"
flake8-commas = "^2.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
